cert-manager/nginx-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-app
  namespace: default
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-app
    image: nginx:latest
    ports:
    - containerPort: 80
